fixing pkg lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,9 @@ linters:
     - bodyclose
     - copyloopvar
     - staticcheck
+  exclusions:
+    paths:
+      - pkg/publicapi
 issues:
   max-same-issues: 0
   max-issues-per-linter: 0
