--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -135,7 +135,7 @@ jobs:
     # we want to publish to the ghcr.io registry. For this we need to have package:write rights
     permissions:
       packages: write
-      contents: read
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
