more dockerfile changes

--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -4,6 +4,7 @@ FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
 FROM alpine:3.21
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
+COPY --from=builder /usr/local/go /usr/local/go
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
 RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
@@ -27,6 +28,7 @@ COPY services/cd-service/cmd/server/bin/main /main
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
+RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
 CMD /main
