fix(dockerfile): fix caching in docker
Ref: SRX-O4HMIP

--- a/services/frontend-service/Dockerfile
+++ b/services/frontend-service/Dockerfile
@@ -5,11 +5,7 @@ RUN apk --update add --no-cache curl make nodejs npm ca-certificates tzdata
 RUN npm install -g pnpm@8.5.1
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
 # frontend-service:
-ADD services/frontend-service/cmd/server/ /kp/services/frontend-service/cmd/server/
-ADD services/frontend-service/pkg /kp/services/frontend-service/pkg
 ADD services/frontend-service/package.json /kp/services/frontend-service/
-ADD services/frontend-service/src /kp/services/frontend-service/src
-ADD services/frontend-service/buf* /kp/services/frontend-service/
 ADD services/frontend-service/pnpm-lock.yaml /kp/services/frontend-service/
 ADD services/frontend-service/pnpm-workspace.yaml /kp/services/frontend-service/
 ADD services/frontend-service/tsconfig.json /kp/services/frontend-service/
@@ -17,6 +13,11 @@ ADD services/frontend-service/.prettierrc /kp/services/frontend-service/
 ADD services/frontend-service/.nvmrc /kp/services/frontend-service/
 ADD services/frontend-service/.npmrc /kp/services/frontend-service/
 ADD services/frontend-service/.eslintrc /kp/services/frontend-service/
+RUN cd /kp/services/frontend-service && pnpm i
+ADD services/frontend-service/cmd/server/ /kp/services/frontend-service/cmd/server/
+ADD services/frontend-service/pkg /kp/services/frontend-service/pkg
+ADD services/frontend-service/src /kp/services/frontend-service/src
+ADD services/frontend-service/buf* /kp/services/frontend-service/
 ADD services/frontend-service/public /kp/services/frontend-service/public
 ADD pkg/api/v1 /kp/services/frontend-service/api
 ADD infrastructure /kp/infrastructure
@@ -28,19 +29,18 @@ RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg && buf generate
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
+# Build js:
+WORKDIR /kp/services/frontend-service/
+RUN mkdir -p src/api
+RUN buf generate --path api --timeout 5m
+RUN pnpm build
+
 # Build go:
 WORKDIR /kp/
 ADD Makefile.variables .
 ADD Makefile .
 RUN make -C pkg gen SKIP_BUILDER=1 PKG_WITHOUT_DOCKER=1
-RUN GOARCH=amd64 GOOS=linux CGO_ENABLED=0 go build -o /kp/main /kp/services/frontend-service/cmd/server/main.go
-
-# Build js:
-WORKDIR /kp/services/frontend-service/
-RUN pnpm i
-RUN mkdir -p src/api
-RUN buf generate --path api --timeout 5m
-RUN pnpm build
+COPY services/frontend-service/cmd/server/bin/main /kp/main
 
 FROM scratch
 LABEL org.opencontainers.image.source=https://github.com/freiheit-com/kuberpult
