--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -72,11 +72,11 @@ clean:
 	rm -f publicapi/$(GO_SERVER_GEN)
 proto: api/v1/api_grpc.pb.go publicapi
 
-build-pr: IMAGE_TAG=pr-$(VERSION)
-build-pr: BUILDER_IMAGE=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
-build-pr: all
+#build-pr: IMAGE_TAG=pr-$(VERSION)
+#build-pr: BUILDER_IMAGE=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
+build-pri-internal: all
 
-build-main: IMAGE_TAG=main-$(VERSION)
-build-main: all
+#build-main: IMAGE_TAG=main-$(VERSION)
+build-main-internal: all
 
 .PHONY: all clean release test
