--- a/services/reposerver-service/Dockerfile
+++ b/services/reposerver-service/Dockerfile
@@ -17,7 +17,10 @@ COPY ./services/reposerver-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
-COPY ./services/reposerver-service/cmd/server/bin/main /main
+#RUN sh -c 'test -n "$(MAIN_PATH)" || exit 0; cd $(MAIN_PATH) && CGO_ENABLED=$(CGO_ENABLED) GOOS=linux go build -o bin/main . && cd ../.. && if [ "$(CGO_ENABLED)" = "1" ]; then ldd $(MAIN_PATH)/bin/main | tr -s [:blank:] '\n' | grep ^/ | xargs -I % install -D % $(MAIN_PATH)/%; fi'
+#COPY ./services/reposerver-service/cmd/server/bin/main /main
+
+
 COPY --from=builder /kp/go.mod ./go.mod
 COPY --from=builder /kp/go.sum ./go.sum
 
@@ -26,4 +29,16 @@ RUN cd pkg && buf generate
 RUN mkdir -p /kp/pkg/publicapi
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+
+# TODO SU: do not copy main!
+COPY --chown=kp:kp services/reposerver-service services/reposerver-service
+RUN echo hello
+RUN pwd
+
+RUN cd services/reposerver-service && CGO_ENABLED=false GOOS=linux go build -o bin/main cmd/server/main.go
+RUN ldd services/reposerver-service/bin/main | tr -s [:blank:] '\n' | grep ^/ | xargs -I % install -D % $(MAIN_PATH)/%
+
+RUN echo hello world
+
+
 CMD /main
