chore(ci): remove pkg from builder image. Upgrade builder image base buf image to 1.55.1. Refactor makefiles for new image building (#2561)
Ref: SRX-O4HMIP

--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -135,12 +135,20 @@ jobs:
     # we want to publish to the ghcr.io registry. For this we need to have package:write rights
     permissions:
       packages: write
-      contents: read
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install Buf
+        uses: bufbuild/buf-action@v1
+        with:
+          setup_only: true
+      - name: Install oapi-codegen
+        run: |
+          go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
       - name: Set version pr/main
         if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
         run: |
