fix cd-service & cleanup

--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -10,8 +10,6 @@ RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /kp/go.mod /go.mod
-COPY --from=builder /kp/go.sum /go.sum
 COPY services/cd-service/gitconfig /etc/gitconfig
 COPY services/cd-service/policy.csv /etc/policy.csv
 COPY services/cd-service/team.csv /etc/team.csv
@@ -24,11 +22,17 @@ WORKDIR /kp
 RUN mkdir -p database/migrations
 COPY database/migrations /migrations
 
-COPY services/cd-service/cmd/server/bin/main /main
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+
+COPY --chown=kp:kp services/cd-service services/cd-service
+
+RUN cd services/cd-service && CGO_ENABLED=true GOOS=linux go build -o bin/main cmd/server/main.go
+RUN ldd services/cd-service/bin/main | tr -s [:blank:] '\n' | grep ^/ | xargs -I % install -D % $(MAIN_PATH)/%
 
 CMD /main
