--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -14,21 +14,27 @@ RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /kp/go.mod /go.mod
-COPY --from=builder /kp/go.sum /go.sum
 
 COPY services/manifest-repo-export-service/cmd/server/lib/ /lib
 COPY services/manifest-repo-export-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
+
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
+
 RUN mkdir -p database/migrations
 COPY database/migrations /migrations
-COPY services/manifest-repo-export-service/cmd/server/bin/main /main
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
+
+COPY --chown=kp:kp services/manifest-repo-export-service services/manifest-repo-export-service
+
+RUN cd services/manifest-repo-export-service && CGO_ENABLED=false GOOS=linux go build -o bin/main cmd/server/main.go
+RUN ldd services/manifest-repo-export-service/bin/main | tr -s [:blank:] '\n' | grep ^/ | xargs -I % install -D % bin/main/%
 
 CMD /main
