specify trivy secret location

--- a/trivy/Makefile
+++ b/trivy/Makefile
@@ -38,7 +38,7 @@ push-base-image:
 
 scan-service-pr: build-base-image
 	docker run --rm -e TRIVY_USERNAME="" -e GOOGLE_APPLICATION_CREDENTIALS="/root/credentials.json" -v "$(GCP_CREDENTIALS_PATH)":/root/credentials.json:ro $(TRIVY_IMAGE_URL) \
-		trivy --db-repository $(TRIVY_DB_REPO)  --cache-dir /tmp/trivy_cache --severity HIGH,CRITICAL --exit-code 1 image "$(KUBERPULT_SERVICE_IMAGE)"
+		trivy --secret-config ./trivy-secret.yaml --db-repository $(TRIVY_DB_REPO)  --cache-dir /tmp/trivy_cache --severity HIGH,CRITICAL --exit-code 1 image "$(KUBERPULT_SERVICE_IMAGE)"
 
 scan-service:
 	mkdir -p $(KUBERPULT_REPORT_DIR)
