--- a/cli/Makefile
+++ b/cli/Makefile
@@ -27,11 +27,13 @@ include ../infrastructure/make/go/include.mk
 test: unit-test
 build: lint test docker
 
-#build-pr: IMAGE_TAG=pr-$(VERSION)
 build-pr-internal: build release
+build-pr:
+	IMAGE_TAG=pr-$(VERSION) $(MAKE) build-pr-internal
 
-#build-main: IMAGE_TAG=main-$(VERSION)
 build-main-internal: build release
+build-main:
+ 	IMAGE_TAG=main-$(VERSION) $(MAKE) build-main-internal
 
 .PHONY: lint
 lint:
