--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -72,11 +72,8 @@ clean:
 	rm -f publicapi/$(GO_SERVER_GEN)
 proto: api/v1/api_grpc.pb.go publicapi
 
-#build-pr: IMAGE_TAG=pr-$(VERSION)
-#build-pr: BUILDER_IMAGE=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
-build-pri-internal: all
+build-pr: all
 
-#build-main: IMAGE_TAG=main-$(VERSION)
-build-main-internal: all
+build-main: all
 
 .PHONY: all clean release test
