--- a/tests/integration-tests/cluster-setup/docker-compose-k3s-B.yml
+++ b/tests/integration-tests/cluster-setup/docker-compose-k3s-B.yml
@@ -1,34 +1,41 @@
-# to run define K3S_TOKEN, K3S_VERSION is optional, eg:
-#   K3S_TOKEN=${RANDOM}${RANDOM}${RANDOM} docker-compose up
-
 services:
-
-  server:
-    image: "rancher/k3s:latest"
-    command: server
-#    command: server --data-dir /my/custom/data
-#    tmpfs:
-#    - /run
-#    - /var/run
-#    ulimits:
-#      nproc: 65535
-#      nofile:
-#        soft: 65535
-#        hard: 65535
+  k3s-server:
+    image: rancher/k3s:latest
+    container_name: k3s-server
     privileged: true
-#    restart: always
-#    environment:
-#    - K3S_TOKEN=${K3S_TOKEN:?err}
-#    - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
-#    - K3S_KUBECONFIG_MODE=666
-#    volumes:
-#    - k3s-server:/var/lib/rancher/k3s
-#    - /home/su/.k3s-cache:/my/custom/data
-    # This is just so that we get the kubeconfig file out
-#    - ./config:/output
+    environment:
+      - K3S_KUBECONFIG_OUTPUT=/output/kubeconfig.yaml
+      - K3S_KUBECONFIG_MODE=666
+    command: server
+    volumes:
+      - k3s-server-data:/var/lib/rancher/k3s
+      - ./output:/output
     ports:
-    - 6443:6443  # Kubernetes API Server
+      - "6443:6443"   # Kubernetes API
+      - "80:80"       # Example workload port
+      - "443:443"
+    networks:
+      - k3snet
 
-  agent:
-    image: "rancher/k3s:latest"
+  k3s-agent:
+    image: rancher/k3s:latest
+    container_name: k3s-agent
+    privileged: true
+    environment:
+      - K3S_URL=https://k3s-server:6443
+      - K3S_TOKEN=${K3S_TOKEN}
     command: agent
+    depends_on:
+      - k3s-server
+    volumes:
+      - k3s-agent-data:/var/lib/rancher/k3s
+    networks:
+      - k3snet
+
+volumes:
+  k3s-server-data:
+  k3s-agent-data:
+
+networks:
+  k3snet:
+    driver: bridge
