--- a/charts/kuberpult/templates/cd-service.yaml
+++ b/charts/kuberpult/templates/cd-service.yaml
@@ -109,7 +109,7 @@ spec:
             cpu:  {{ .Values.db.requests.cpu }}
 {{- end }}
       - name: service
-        image: "{{ .Values.hub }}/{{ .Values.cd.image }}:{{ $.Chart.AppVersion }}"
+        image: "{{ .Values.hub }}/{{ .Values.cd.image }}:{{ .Values.imagePrefix }}{{ $.Chart.AppVersion }}"
         ports:
           - name: http
             containerPort: 8080
