--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -17,6 +17,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+imagePrefix: ""
+
 git:
   # The git url of the manifest repository (git protocol)
   url:  # git@github.com/.../...
