fix(ci): Only run docker once (#2570)
When running `make docker` we now only run one docker command (per
service). This leads to faster build times.

Previously we did:
1) docker run with the builder image to compile
2) save the executable locally
3) actual docker build that copies the executable

The size of docker images has also been reduced.

Ref: SRX-O4HMIP

--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.21
+FROM alpine:3.22 AS compiler
 RUN apk add --no-cache ca-certificates tzdata alpine-sdk go make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
@@ -14,21 +14,41 @@ RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /kp/go.mod /go.mod
-COPY --from=builder /kp/go.sum /go.sum
 
 COPY services/manifest-repo-export-service/cmd/server/lib/ /lib
 COPY services/manifest-repo-export-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
-RUN mkdir -p database/migrations
-COPY database/migrations /migrations
-COPY services/manifest-repo-export-service/cmd/server/bin/main /main
+
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
-CMD /main
+COPY --chown=kp:kp services/manifest-repo-export-service services/manifest-repo-export-service
+
+RUN mkdir -p /bin
+RUN cd services/manifest-repo-export-service && CGO_ENABLED=true GOOS=linux go build -o /tmp/main cmd/server/main.go
+
+USER root
+RUN mv /tmp/main /main
+RUN ldd /main | awk '/=>/ {print $3}' | xargs -r -I '{}' sh -c 'if [ ! -e "/lib/$(basename {})" ]; then cp -v "{}" /lib/; fi'
+RUN chmod +x /main
+
+FROM alpine:3.21
+RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+COPY --from=compiler /main /main
+COPY --from=compiler /lib /lib
+
+USER kp
+WORKDIR /kp
+RUN chown -R kp:kp /kp
+
+RUN mkdir -p database/migrations
+COPY database/migrations /migrations
+
+CMD ["/main"]
