--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.21
+FROM alpine:3.21 AS compiler
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
@@ -10,8 +10,6 @@ RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /kp/go.mod /go.mod
-COPY --from=builder /kp/go.sum /go.sum
 COPY services/cd-service/gitconfig /etc/gitconfig
 COPY services/cd-service/policy.csv /etc/policy.csv
 COPY services/cd-service/team.csv /etc/team.csv
@@ -21,14 +19,34 @@ COPY services/cd-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
-RUN mkdir -p database/migrations
-COPY database/migrations /migrations
 
-COPY services/cd-service/cmd/server/bin/main /main
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
-CMD /main
+COPY --chown=kp:kp services/cd-service services/cd-service
+
+RUN mkdir -p /bin
+RUN cd services/cd-service && CGO_ENABLED=false GOOS=linux go build -o /tmp/main cmd/server/main.go
+
+USER root
+RUN mv /tmp/main /main
+RUN chmod +x /main
+
+CMD ["/main"]
+
+FROM alpine:3.21
+WORKDIR /kp
+RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+COPY --from=compiler /main /main
+COPY --from=compiler /lib /lib
+
+RUN mkdir -p database/migrations
+COPY database/migrations /migrations
+
+USER kp
+CMD ["/main"]
