--- a/services/reposerver-service/Dockerfile
+++ b/services/reposerver-service/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.21
+FROM alpine:3.21 AS compiler
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
@@ -11,13 +11,12 @@ RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 
-
 COPY ./services/reposerver-service/cmd/server/lib/ /lib
 COPY ./services/reposerver-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
-COPY ./services/reposerver-service/cmd/server/bin/main /main
+
 COPY --from=builder /kp/go.mod ./go.mod
 COPY --from=builder /kp/go.sum ./go.sum
 
@@ -26,4 +25,21 @@ RUN cd pkg && buf generate
 RUN mkdir -p /kp/pkg/publicapi
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg && oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
-CMD /main
+
+COPY --chown=kp:kp services/reposerver-service services/reposerver-service
+
+RUN mkdir -p /bin
+RUN cd services/reposerver-service && CGO_ENABLED=false GOOS=linux go build -o /tmp/main cmd/server/main.go
+
+USER root
+RUN mv /tmp/main /main
+RUN chmod +x /main
+
+FROM alpine:3.21
+RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+COPY --from=compiler /main /main
+COPY --from=compiler /lib /lib
+
+USER kp
+WORKDIR /kp
+CMD ["/main"]
