--- a/services/rollout-service/Dockerfile
+++ b/services/rollout-service/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.21
+FROM alpine:3.21 AS compiler
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
@@ -10,19 +10,36 @@ RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /kp/go.mod /go.mod
-COPY --from=builder /kp/go.sum /go.sum
 
 COPY services/rollout-service/cmd/server/lib/ /lib
 COPY services/rollout-service/cmd/server/usr/ /usr
 
 USER kp
 WORKDIR /kp
-COPY ./services/rollout-service/cmd/server/bin/main /main
+
+COPY --from=builder /kp/go.mod ./go.mod
+COPY --from=builder /kp/go.sum ./go.sum
 
 COPY --chown=kp:kp pkg pkg
 RUN cd pkg && buf generate
 RUN go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 RUN cd pkg &&  oapi-codegen -generate "std-http-server" -o publicapi/server-gen.go -package publicapi publicapi/api.yaml
 
-CMD /main
+COPY --chown=kp:kp services/rollout-service services/rollout-service
+
+RUN mkdir -p /bin
+RUN cd services/rollout-service && CGO_ENABLED=false GOOS=linux go build -o /tmp/main cmd/server/main.go
+
+USER root
+RUN mv /tmp/main /main
+RUN ldd /main | awk '/=>/ {print $3}' | xargs -r -I '{}' sh -c 'if [ ! -e "/lib/$(basename {})" ]; then cp -v "{}" /lib/; fi'
+RUN chmod +x /main
+
+
+FROM alpine:3.21
+RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+COPY --from=compiler /main /main
+COPY --from=compiler /lib /lib
+
+USER kp
+CMD ["/main"]
