--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -22,12 +22,11 @@ IMAGENAME_VERSIONED=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:$(VERSI
 IMAGENAME_VERSIONED_PR=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:pr-$(VERSION)
 IMAGENAME_VERSIONED_MAIN=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:main-$(VERSION)
 IMAGENAME_UNVERSIONED_MAIN=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:main
-CACHEIMAGE?=
 
 build:
-	docker buildx build --cache-from type=registry,ref=$(IMAGENAME_UNVERSIONED_MAIN) -t $(IMAGENAME) -f Dockerfile ../../../
+	docker build -t $(IMAGENAME) -f Dockerfile ../../../
 
-build-pr: pull-main build publish
+build-pr: build publish
 	echo "Building on pull request"
 	docker tag $(IMAGENAME) $(IMAGENAME_VERSIONED_PR)
 	docker push $(IMAGENAME_VERSIONED_PR)
@@ -61,8 +60,5 @@ publish: release
 get-builder-image:
 	@echo "$(KUBERPULT_BUILDER)"
 
-retag-main: pull-main
-	docker tag $(IMAGENAME_UNVERSIONED_MAIN) $(IMAGENAME_VERSIONED_PR) && docker push $(IMAGENAME_VERSIONED_PR)
-
-pull-main:
-	docker pull $(IMAGENAME_UNVERSIONED_MAIN)
+retag-main:
+	docker pull $(IMAGENAME_UNVERSIONED_MAIN) && docker tag $(IMAGENAME_UNVERSIONED_MAIN) $(IMAGENAME_VERSIONED_PR) && docker push $(IMAGENAME_VERSIONED_PR)
