fix(ci): docker size threshold per service
This adds a shell-script that checks the size
of a newly created docker image.

Ref: SRX-Q21BDN

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -19,6 +19,7 @@ CGO_ENABLED=0
 MAIN_PATH=cmd/kuberpult-client
 SERVICE=client
 MIN_COVERAGE=66.6
+MAX_DOCKER_SIZE_MB=7
 CONTEXT?=../
 #SERVICE_DIR=/kp/cli
 
