--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -20,6 +20,7 @@ GO := go
 GO_FILES := $(shell find . -type f -name '*.go')
 GO_SERVER_GEN := server-gen.go
 MIN_COVERAGE?=47
+MAX_DOCKER_SIZE_MB=8
 MAIN_PATH=
 
 SERVICE_DIR:=/kp/pkg
