--- a/charts/kuberpult/templates/frontend-service.yaml
+++ b/charts/kuberpult/templates/frontend-service.yaml
@@ -100,10 +100,10 @@ spec:
         - name: KUBERPULT_CDSERVER
           value: kuberpult-cd-service:8443
         - name: KUBERPULT_VERSIONSERVER
-{{- if (eq .Values.db.dbOption "NO_DB") }}
-          value: kuberpult-cd-service:8443
-{{- else }}
+{{- if (eq .Values.manifestRepoExport.enabled "true") }}
           value: kuberpult-manifest-repo-export-service:8443
+{{- else }}
+          value: ""
 {{- end }}
         - name: KUBERPULT_ARGOCD_BASE_URL
           value: {{ .Values.argocd.baseUrl | quote }}
