--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
 # frontend services needs this:
-!/Makefile
-!/Makefile.variables
+!Makefile
+!Makefile.variables
 # but generally we do not need Makefiles:
-#**/Makefile
+services/*/Makefile
 
 services/frontend-service/node_modules
