--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -1,14 +1,19 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.22.1 AS compiler
+FROM alpine:3.22 AS compiler
+RUN echo DEBUG1 && apk info pcre2
 RUN apk add --no-cache ca-certificates tzdata alpine-sdk go make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+RUN echo DEBUG2 && apk info pcre2
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
+RUN echo DEBUG3 && apk info pcre2
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
 COPY /services/manifest-repo-export-service/install-libgit2.sh /tmp/install-libgit2.sh
 COPY services/manifest-repo-export-service/gitconfig /etc/gitconfig
+RUN echo DEBUG4 && apk info pcre2
 RUN /tmp/install-libgit2.sh && rm /tmp/install-libgit2.sh
+RUN echo DEBUG5 && apk info pcre2
 ENV TZ=Europe/Berlin
 RUN adduser --disabled-password --home "/kp" --uid 1000 kp
 RUN chown -R kp:kp /kp
