--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -1,9 +1,12 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
-FROM alpine:3.22 AS compiler
+FROM alpine:3.22.1 AS compiler
 RUN echo DEBUG1 && apk info pcre2 || true
-RUN apk add --no-cache ca-certificates tzdata go make pkgconfig build-base git tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip libffi-dev curl libssh2-dev
+RUN apk add --no-cache ca-certificates tzdata go make pkgconfig build-base tar npm sqlite sqlite-dev bash cmake g++ musl-dev openssl-dev python3 py3-pip
+RUN apk add --no-cache libffi-dev
+RUN apk add --no-cache curl
+RUN apk add --no-cache libssh2-dev
 RUN echo DEBUG2 && apk info pcre2 || true
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
