chore: reduce size for Docker builder image
Ref: SRX-4W0T9Q

--- a/services/cd-service/Dockerfile
+++ b/services/cd-service/Dockerfile
@@ -1,15 +1,23 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
+
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
 FROM alpine:3.21 AS compiler
+
+ARG UID=1000
+
 ENV TZ=Europe/Berlin
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
+
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
-RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+
+RUN adduser --disabled-password --home "/kp" --uid ${UID} kp
 RUN chown -R kp:kp /kp
+
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
+
 COPY services/cd-service/gitconfig /etc/gitconfig
 COPY services/cd-service/policy.csv /etc/policy.csv
 COPY services/cd-service/team.csv /etc/team.csv
@@ -40,8 +48,13 @@ RUN chmod +x /main
 CMD ["/main"]
 
 FROM alpine:3.21
+
+ARG UID=1000
+
 WORKDIR /kp
-RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+
+RUN adduser --disabled-password --home "/kp" --uid ${UID} kp
+
 COPY --from=compiler /main /main
 COPY --from=compiler /lib /lib
 
@@ -49,4 +62,5 @@ RUN mkdir -p database/migrations
 COPY database/migrations /migrations
 
 USER kp
+
 CMD ["/main"]
