--- a/services/reposerver-service/Dockerfile
+++ b/services/reposerver-service/Dockerfile
@@ -1,13 +1,21 @@
 ARG BUILDER_IMAGE_TAG
 ARG BUILDER_IMAGE=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder
+
 FROM ${BUILDER_IMAGE}:${BUILDER_IMAGE_TAG} AS builder
 FROM alpine:3.21 AS compiler
+
+ARG UID=1000
+
 ENV TZ=Europe/Berlin
+
 COPY --from=builder /usr/local/bin/buf /usr/local/bin/buf
 COPY --from=builder /usr/local/go /usr/local/go
+
 ENV PATH="/usr/local/go/bin:/kp/go/bin:${PATH}"
-RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+
+RUN adduser --disabled-password --home "/kp" --uid ${UID} kp
 RUN chown -R kp:kp /kp
+
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 
@@ -36,10 +44,16 @@ RUN mv /tmp/main /main
 RUN chmod +x /main
 
 FROM alpine:3.21
-RUN adduser --disabled-password --home "/kp" --uid 1000 kp
+
+ARG UID=1000
+
+RUN adduser --disabled-password --home "/kp" --uid ${UID} kp
+
 COPY --from=compiler /main /main
 COPY --from=compiler /lib /lib
 
 USER kp
+
 WORKDIR /kp
+
 CMD ["/main"]
